Updated Resume page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container">
         <div class="navigation">
-
             <div class="hamburger" id="hamburger" onclick="toggleHamburger()">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -49,7 +48,7 @@
             <div id="fullpage">
                 <div class="section active" id="section0">
                     <p>
-                    I’m Elizabeth a web developer based out of Toronto, Canada. I love building web applications using cutting edge technologies such as Javascript (love Nodejs with Express) and beautifully craft it with awesome bootstrap (also fontawesome, who doesn't like fontawesome) and deliver it to all kinds of platforms including web, mobile and tablets using responsive designs.
+                        Hi, I’m Elizabeth a web developer based out of Toronto, Canada. I love building web applications using cutting edge technologies such as Javascript (love Nodejs with Express) and beautifully craft it with awesome bootstrap (also fontawesome, who doesn't like fontawesome) and deliver it to all kinds of platforms including web, mobile and tablets using responsive designs.
                     </p>
                     <p>
                         I am also experienced in building web apps using ASP.NET and PHP. Dont forget to checkout my <i class="fa fa-github fa-2x"></i> page <a href="">here</a>.
@@ -79,47 +78,56 @@
                     <div class="skills-container">
                             <div class="skills php">PHP</div>
                         </div>
-
                 </div>
                 <div class="section" id="section3">
-                    <h1>Resume</h1>
-                    <!-- <div class="education">
-                        <h3><i class="fa fa-graduation-cap"></i> Education </i></h3>
-                        <ul>
-                            <li>
-                                <ul>
-                                    <li class="graduation-year">2018 - September</li>
-                                    <li class="program-name">Web Development</li>
-                                    <li class="college">Humber college</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul>
-                                    <li class="graduation-year">2014 - July</li>
-                                    <li class="program-name">B.Tech in Electronics & Communication</li>
-                                    <li class="college">University of Kerala</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div> -->
+                    <div class="resume-head">
+                        <h1>Resume</h1>
+                        <a href="https://goo.gl/1tLUWM" target="_blank">
+                            Resume  <i class="fa fa-file-pdf-o"></i></i>
+                        </a>
+                    </div>
                     <div class="resume-details">
-                        <div class="left-block">
+                        <div class="work-experience">
+                            <h3><i class="fa fa-briefcase"></i> Work Experience</h3>
                             <ul>
-                                <li>Web Development using Javascript, PHP, ASP.NET</li>
-                                <li>Responsive web design</li>
-                                <li>CSS Animations</li>
-                                <li>Latest frameworks such as Node.js, Express.js and JQuery</li>
+                                <li class="work-details">
+                                    <ul>
+                                        <li><a class="company" href="https://www.capgemini.com/" target="_blank">Capgemini</a><span class="duration">Dec 2015 - Jan 2017</span></li>
+                                        <li class="position">Software Engineer</li>
+                                        <li class="job">Developed web application using Javascript, HTML and CSS.</li>
+                                    </ul>
+                                </li>
+                                <li class="work-details">
+                                    <ul>
+                                        <li><a class="company" href="https://www.allianz.com/en/" target="_blank">Allianz</a><span class="duration">Mar 2015 - Nov 2015</span></li>
+                                        <li class="position">Customer Service Associate</li>
+                                        <li class="job">Worked as an insurance service representative to support cutomers.</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
-                        <div class="right-block">
+                        <div class="education">
+                            <h3><i class="fa fa-graduation-cap"></i> Education </i></h3>
                             <ul>
-                                <li></li>
+                                <li class="edu-details">
+                                    <ul>
+                                        <li class="graduation-year">2018 - September</li>
+                                        <li class="program-name">Post Graduation - Web Development</li>
+                                        <li class="college">Humber college</li>
+                                        <li class="ipad-grad-details">Humber college - September 2018</li>
+                                    </ul>
+                                </li>
+                                <li class="edu-details">
+                                    <ul>
+                                        <li class="graduation-year">2014 - July</li>
+                                        <li class="program-name">B.Tech - Electronics & Communication</li>
+                                        <li class="college">University of Kerala</li>
+                                        <li class="ipad-grad-details">University of Kerala - July 2014</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <a href="https://goo.gl/1tLUWM" target="_blank" class="resume">
-                        Resume <i class="fa fa-file-pdf"></i>
-                    </a>
                 </div>
                 <div class="contact section" id="section4">
                     <h1>Contact</h1>
