Added styling for works page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,52 @@
                 </div>
                 <div class="section" id="section1">
                     <h1>Projects and Demos</h1>
+                    <div class="projects">
+                        <div class="project">
+                                <img src="images/instagram.png" alt="instagram-project" />
+                                <div class="project-name">Instagram-Flickr</div>
+                                <div class="project-desc">​HTML/CSS/Javascript</div>
+                                <div class="demo-links">
+                                    <a href="https://github.com/emreji/instagram-flickr" target="_blank">Github</a>
+                                    <a href="http://emreji.com/instagram/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <img src="images/web-whatsapp.png" alt="web-whatsapp-project" />
+                                <div class="project-name">Web-whatsapp</div>
+                                <div class="project-desc">Javascript/Nodejs/Socket.io/HTML/CSS</div>
+                                <div class="demo-links">
+                                    <a href="https://github.com/emreji/whatsapp-web" target="_blank">Github</a>
+                                    <a href="#" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <img src="images/seasons.png" alt="seasons-project" />
+                                <div class="project-name">Seasons</div>
+                                <div class="project-desc">CSS3 Animation/HTML/Javascript</div> 
+                                <div class="demo-links">
+                                    <a href="https://github.com/emreji/seasons" target="_blank">Github</a>
+                                    <a href="http://emreji.com/seasons/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <img src="images/portfolio.png" alt="portfolio-project" />
+                                <div class="project-name">Portfolio</div>
+                                <div class="project-desc">HTML/CSS/Javascript/JQuery</div>
+                                <div class="demo-links">
+                                    <a href="https://github.com/emreji/portfolio-website" target="_blank">Github</a>
+                                    <a href="http://emreji.com/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <img src="images/cms.png" alt="CMS-project" />
+                                <div class="project-name">CMS</div>
+                                <div class="project-desc">ASP.NET/HTML/SQL</div>
+                                <div class="demo-links">
+                                    <a href="https://github.com/emreji/cms-final-project" target="_blank">Github</a>
+                                </div>
+                            </div>
+                    </div>
                 </div>
                 <div class="section" id="section2">
                     <h1>Skills</h1>
