Added styling for responsive version.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <div class="project-desc">Javascript/Nodejs/Socket.io/HTML/CSS</div>
                                 <div class="demo-links">
                                     <a href="https://github.com/emreji/whatsapp-web" target="_blank">Github</a>
-                                    <a href="#" target="_blank">Demo</a>
+                                    <a href="http://emreji.com/web-whatsapp/" target="_blank">Demo</a>
                                 </div>
                             </div>
                             <div class="project">
