Added projects and changed profile pic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="profile">
                 <div class="profile-image">
-                    <img src="images/emreji_profile_pic.jpeg" alt="Elizabeth Reji Profile Picture" />
+                    <img src="images/profile-pic.jpg" alt="Elizabeth Reji Profile Picture" />
                 </div>
                 <div class="quickprofile">
                     <div class="name">
@@ -47,12 +47,14 @@
         <div class="content">
             <div id="fullpage">
                 <div class="section active" id="section0">
-                    <p>
-                        Hi, I’m Elizabeth a web developer based out of Toronto, Canada. I love building web applications using cutting edge technologies such as Javascript (love Nodejs with Express) and beautifully craft it with awesome bootstrap (also fontawesome, who doesn't like fontawesome) and deliver it to all kinds of platforms including web, mobile and tablets using responsive designs.
-                    </p>
-                    <p>
-                        I am also experienced in building web apps using ASP.NET and PHP. Dont forget to checkout my <i class="fa fa-github fa-2x"></i> page <a href="">here</a>.
-                    </p>   
+                    <div class="bio">
+                        <p>
+                            Hi, I’m a web developer based out of Toronto, Canada. I love building web applications using cutting edge technologies such as Javascript (love Nodejs with Express) and beautifully craft it with awesome bootstrap (also fontawesome, who doesn't like fontawesome) and deliver it to all kinds of platforms including web, mobile and tablets using responsive designs.
+                        </p>
+                        <p>
+                            I am also experienced in building web apps using ASP.NET and PHP. Don't forget to checkout my <a href="https://github.com/emreji" target="_blank"><i class="fa fa-github fa-2x"></i></a> page.
+                        </p> 
+                    </div>  
                 </div>
                 <div class="section" id="section1">
                     <h1>Projects and Demos</h1>
@@ -72,35 +74,43 @@
                                 <div class="project-desc">Javascript/Nodejs/Socket.io/HTML/CSS</div>
                                 <div class="demo-links">
                                     <a href="https://github.com/emreji/whatsapp-web" target="_blank">Github</a>
-                                    <a href="http://emreji.com/web-whatsapp/" target="_blank">Demo</a>
+                                    <a href="https://liz-whatsapp-web.herokuapp.com/" target="_blank">Demo</a>
                                 </div>
                             </div>
                             <div class="project">
-                                <img src="images/seasons.png" alt="seasons-project" />
-                                <div class="project-name">Seasons</div>
-                                <div class="project-desc">CSS3 Animation/HTML/Javascript</div> 
+                                <img src="images/netboost.png" alt="netboost-project" />
+                                <div class="project-name">NetBoost</div>
+                                <div class="project-desc">PHP/HTML/CSS/MySQL</div>
                                 <div class="demo-links">
-                                    <a href="https://github.com/emreji/seasons" target="_blank">Github</a>
-                                    <a href="http://emreji.com/seasons/" target="_blank">Demo</a>
+                                    <a href="http://netboost.ca/" target="_blank">Demo</a>
                                 </div>
                             </div>
                             <div class="project">
-                                <img src="images/portfolio.png" alt="portfolio-project" />
-                                <div class="project-name">Portfolio</div>
-                                <div class="project-desc">HTML/CSS/Javascript/JQuery</div>
+                                <img src="images/calendar.png" alt="Calendar project" />
+                                <div class="project-name">Calendar</div>
+                                <div class="project-desc">PHP/HTML/CSS/Google API</div>
                                 <div class="demo-links">
-                                    <a href="https://github.com/emreji/portfolio-website" target="_blank">Github</a>
-                                    <a href="http://emreji.com/" target="_blank">Demo</a>
+                                    <a href="https://github.com/emreji/calendar" target="_blank">Github</a>
+                                    <a href="http://emreji.com/calendar" target="_blank">Demo</a>
                                 </div>
                             </div>
                             <div class="project">
-                                <img src="images/cms.png" alt="CMS-project" />
-                                <div class="project-name">CMS</div>
-                                <div class="project-desc">ASP.NET/HTML/SQL</div>
+                                <img src="images/nshnHospital.png" alt="NSHN-Hospital Redesign" />
+                                <div class="project-name">NSHN-Hospital Redesign</div>
+                                <div class="project-desc">ASP.NET MVC/HTML/MSSQL</div>
                                 <div class="demo-links">
-                                    <a href="https://github.com/emreji/cms-final-project" target="_blank">Github</a>
+                                    <a href="http://nshn-hospital.azurewebsites.net/" target="_blank">Demo</a>
                                 </div>
                             </div>
+                            <div class="project">
+                                    <img src="images/seasons.png" alt="seasons-project" />
+                                    <div class="project-name">Seasons</div>
+                                    <div class="project-desc">CSS3 Animation/HTML/Javascript</div> 
+                                    <div class="demo-links">
+                                        <a href="https://github.com/emreji/seasons" target="_blank">Github</a>
+                                        <a href="http://emreji.com/seasons/" target="_blank">Demo</a>
+                                    </div>
+                                </div>
                     </div>
                 </div>
                 <div class="section" id="section2">
@@ -128,7 +138,7 @@
                 <div class="section" id="section3">
                     <div class="resume-head">
                         <h1>Resume</h1>
-                        <a href="https://goo.gl/1tLUWM" target="_blank">
+                        <a href="https://goo.gl/UZpkmg" target="_blank">
                             Resume  <i class="fa fa-file-pdf-o"></i></i>
                         </a>
                     </div>
