Added more styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="profile">
                 <div class="profile-image">
-                    <img src="images/profile-pic.jpg" alt="Elizabeth Reji Profile Picture" />
+                    <img src="images/profile-pic.JPG" alt="Elizabeth Reji Profile Picture" />
                 </div>
                 <div class="quickprofile">
                     <div class="name">
@@ -59,7 +59,7 @@
                 <div class="section" id="section1">
                     <h1>Projects and Demos</h1>
                     <div class="projects">
-                        <div class="project">
+                        <div class="project projects-web">
                                 <img src="images/instagram.png" alt="instagram-project" />
                                 <div class="project-name">Instagram-Flickr</div>
                                 <div class="project-desc">​HTML/CSS/Javascript</div>
@@ -102,7 +102,7 @@
                                     <a href="http://nshn-hospital.azurewebsites.net/" target="_blank">Demo</a>
                                 </div>
                             </div>
-                            <div class="project">
+                            <div class="project projects-web">
                                     <img src="images/seasons.png" alt="seasons-project" />
                                     <div class="project-name">Seasons</div>
                                     <div class="project-desc">CSS3 Animation/HTML/Javascript</div> 
